GNU C Library NEWS -- history of user-visible changes.
Copyright (C) 1992-2017 Free Software Foundation, Inc.
See the end for copying conditions.

Please send GNU C library bug reports via <http://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.27

Major new features:

* Optimized x86-64 asin, atan2, exp, expf, log, pow, atan, sin and tan
  with FMA, contributed by Arjan van de Ven and H.J. Lu from Intel.

* Optimized x86-64 trunc and truncf for processors with SSE4.1.

* Optimized generic expf, exp2f, logf, log2f and powf.

* In order to support faster and safer process termination the malloc API
  family of functions will no longer print a failure address and stack
  backtrace after detecting heap corruption.  The goal is to minimize the
  amount of work done after corruption is detected and to avoid potential
  security issues in continued process execution.  Reducing shutdown time
  leads to lower overall process restart latency, so there is benefit both
  from a security and performance perspective.

* The abort function terminates the process immediately, without flushing
  stdio streams.  Previous glibc versions used to flush streams, resulting
  in deadlocks and further data corruption.  This change also affects
  process aborts as the result of assertion failures.

* On platforms where long double has the IEEE binary128 format (aarch64,
  alpha, mips64, s390 and sparc), the math library now implements _Float128
  interfaces for that type, as defined by ISO/IEC TS 18661-3:2015.  These
  are the same interfaces added in version 2.26 for some platforms where
  this format is supported but is not the format of long double.

Deprecated and removed features, and other changes affecting compatibility:

* On GNU/Linux, the obsolete Linux constant PTRACE_SEIZE_DEVEL is no longer
  defined by <sys/ptrace.h>.

* libm no longer supports SVID error handling (calling a user-provided